# race-server

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  clean.bat  docker-compose.yaml  docker.bat  environment.bat
includes/: BaseModel.cpp  BaseModel.hpp  DBConfig.hpp  ErrorMessages  ErrorMessages.hpp  response.hpp
includes/controllers/: SvcAlive.hpp  SvcAuthentication.hpp  SvcLoginDetails.hpp
includes/models/: Car.hpp  Driver.hpp  Team.hpp  Tire.hpp  Track.hpp  c_Car.hpp  c_Tire.hpp
includes/routes/: coreRoutes.hpp  f1_routes.hpp  loginRoutes.hpp  login_routes.hpp
initdb/: 01_create_tables.sql  02_insert_data.sql  02_insert_driver_info.sql  03_insert_login_info.sql  04_insert_car_info.sql  06_insert_tires_info.sql
src/: RaceServer.cpp  main.cpp
src/controllers/: SvcAlive.cpp  SvcAuthentication.cpp  SvcLoginDetails.cpp  f1_controller.cpp  f1_controller.h
src/models/: Driver.cpp  Team.cpp  Tire.cpp
src/routes/: f1_routes.cpp  loginRoutes.cpp  login_routes.cpp
tests/: test_SvcAlive.cpp
